#433: Added object and queries for Item Inventory Types